--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "double-last",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Doubles the last letter.",
   "main": "lib/index.js",
   "scripts": {
@@ -23,5 +23,16 @@
   "homepage": "https://github.com/IonicaBizau/double-last#readme",
   "dependencies": {
     "last-char": "^1.0.0"
-  }
+  },
+  "files": [
+    "bin/",
+    "app/",
+    "lib/",
+    "dist/",
+    "src/",
+    "resources/",
+    "menu/",
+    "cli.js",
+    "index.js"
+  ]
 }
