--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "double-last",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Doubles the last letter.",
   "main": "lib/index.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "src/",
     "resources/",
     "menu/",
+    "scripts/",
     "cli.js",
     "index.js"
   ]
