--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "double-last",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "Doubles the last letter.",
   "main": "lib/index.js",
   "scripts": {
@@ -34,6 +34,9 @@
     "resources/",
     "menu/",
     "cli.js",
-    "index.js"
+    "index.js",
+    "bloggify.js",
+    "bloggify.json",
+    "bloggify/"
   ]
 }
