--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "double-last",
-  "version": "1.3.13",
+  "version": "1.3.14",
   "description": "Doubles the last letter.",
   "main": "lib/index.js",
   "scripts": {
@@ -35,6 +35,8 @@
     "menu/",
     "cli.js",
     "index.js",
+    "index.d.ts",
+    "package-lock.json",
     "bloggify.js",
     "bloggify.json",
     "bloggify/"
